# CppNN

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  log_predictions-ci.txt  log_predictions.txt  mnist.sh  profile.sh  read_dataset_images.sh  read_dataset_labels.sh
lib/: CMakeLists.txt
lib/NN/: CMakeLists.txt
lib/NN/src/: Generator.hpp  NN.cpp  NN.hpp  helpers.hpp
lib/NN/src/layers/: BaseLayer.h  BaseLayer.hpp  FullyConnected.cpp  FullyConnected.hpp  ReLU.cpp  ReLU.hpp  SoftMax.cpp  SoftMax.hpp
lib/NN/src/optimizers/: CrossEntropyLoss.cpp  CrossEntropyLoss.hpp  Optimizer.hpp  Sgd.cpp  Sgd.hpp
lib/NN/tests/: NN_tests.cpp
lib/tensor/: CMakeLists.txt
lib/tensor/src/: helpers.hpp  io.cpp  io.hpp  matvec.hpp  tensor.hpp
lib/tensor/tests/: helpers_tests.cpp  io_tests.cpp
mnist-configs/: test.config
src/: CMakeLists.txt  tensor.hpp
src/io/: main.cpp  main.cpp.orig
src/mnist/: main.cpp  main.cpp.orig
